--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -1798,15 +1798,15 @@ body {
   display: none;
 }
 .sign-up-header {
-  height: 550px;
+  height: 500px;
   margin-top: -62.8px;
   padding-top: 137.8px;
   border-radius: 12px;
   box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
-  background-size: cover;
   background-position: 50%;
   text-align: center;
-  background: url("../images/bg-signup.jpg") no-repeat center top;
+  background: url("../images/bg-signup.jpg") no-repeat center;
+  background-size: cover;
 }
 .header-col.header-brand {
   white-space: nowrap;
@@ -1818,7 +1818,9 @@ body {
   font-size: 14px;
   font-weight: 600;
 }
-
+.brandText {
+  color: #000 !important;
+}
 .header-col.header-nav {
   color: #fff;
   font-weight: 600;
