--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -3132,3 +3132,12 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
   
 }
 
+.ant-select:not(.ant-select-customize-input) .ant-select-selector{
+  background-color: unset;
+  border: unset;
+}
+
+.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant0select-customize-input) .ant-select-selector{
+  border-color: unset;
+  box-shadow: unset;
+}
