--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -1163,6 +1163,9 @@ span.blue {
 .justify-content-around {
   justify-content: space-around !important;
 }
+.vh-100 {
+  height: 100vh !important;
+}
 .border-right {
   /* border-right: 1px solid white; */
   box-shadow: 1px 0px 3px lightgrey;
@@ -3121,13 +3124,12 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
 
 /* css added */
 
-.cardAddProduct{
-    width: 100%;
-    max-width: 500px;
-    margin: auto;
-    box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
-    border-radius: 12px;
-    margin-top: 20px;
-    margin-bottom: auto;
-  
+.cardAddProduct {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
+  border-radius: 12px;
+  margin-top: 20px;
+  margin-bottom: auto;
 }
