--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -1163,6 +1163,9 @@ span.blue {
 .justify-content-around {
   justify-content: space-around !important;
 }
+.vh-100 {
+  height: 100vh !important;
+}
 .border-right {
   /* border-right: 1px solid white; */
   box-shadow: 1px 0px 3px lightgrey;
@@ -3130,5 +3133,15 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
     margin-top: 20px;
     margin-bottom: auto;
   
+}
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector{
+  background-color: unset;
+  border: unset;
+}
+
+.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant0select-customize-input) .ant-select-selector{
+  border-color: unset;
+  box-shadow: unset;
 }
 
