Completion of Browse page Filters
Changes:
1. added sort by price Range
2. made the filters coherent
3. added a 'allProducts' searchParameter to get al products in the browse page.

bug: when in browsePAge with a search, and click on allProducts, it doesnt show as react doesnt reload normally on changing url params

--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -3448,11 +3448,11 @@ div.ant-upload {
 
 /* Home Sidebar */
 .homeSidebarDiv {
-  /* height: 70vh; */
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
+
 .sidebarHeading {
   color: #000;
   font-weight: 600;
