--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -1366,8 +1366,17 @@ span.blue {
 .align-items-center {
   align-items: center !important;
 }
+.align-items-start {
+  align-items: end !important;
+}
+.justify-content-start {
+  justify-content: start !important;
+}
 .justify-content-center {
   justify-content: center !important;
+}
+.justify-content-between {
+  justify-content: space-between !important;
 }
 .justify-content-around {
   justify-content: space-around !important;
@@ -3424,17 +3433,57 @@ div.ant-upload {
 .productContainer {
   background-color: white;
   border: 1px solid rgba(242, 147, 9, 0.2);
-  padding: 10px;
-  width: 22rem;
-  height: auto;
+  padding: 0;
+  margin: 0;
+  /* width: 22rem; */
+  width: 40rem;
   display: flex;
   flex-direction: column;
+  height: 500px !important;
 }
 .productContainer:hover {
   border-color: #f29309;
 }
 .productDetails {
-  background-color: #ffffff;
+  padding: 10px;
+  height: 260px !important;
+  background-color: #f8f8f8;
+}
+.productActionButtons {
+  margin-bottom: 0 !important;
+}
+.productActionButtons button {
+  margin-right: 0.2rem;
+}
+.productPrice {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.rounded-border {
+  border-radius: 6px !important;
+  -webkit-border-radius: 6px !important;
+  -moz-border-radius: 6px !important;
+  -ms-border-radius: 6px !important;
+  -o-border-radius: 6px !important;
+}
+.rounded-border-top {
+  border-radius: 6px 6px 0 0 !important;
+  -webkit-border-radius: 6px 6px 0 0 !important;
+  -moz-border-radius: 6px 6px 0 0 !important;
+  -ms-border-radius: 6px 6px 0 0 !important;
+  -o-border-radius: 6px 6px 0 0 !important;
+}
+.rounded-border-bottom {
+  border-radius: 0 0 6px 6px !important;
+  -webkit-border-radius: 0 0 6px 6px !important;
+  -moz-border-radius: 0 0 6px 6px !important;
+  -ms-border-radius: 0 0 6px 6px !important;
+  -o-border-radius: 0 0 6px 6px !important;
+}
+.productCard:hover h5 {
+  color: #a96500;
+  text-decoration: underline;
 }
 .productImg {
   display: flex;
@@ -3486,15 +3535,19 @@ div.ant-upload {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px; /* Adjust the width as per your needs */
-  height: 200px; /* Adjust the height as per your needs */
+  width: 600px; /* Adjust the width as per your needs */
+  height: 600px; /* Adjust the height as per your needs */
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   background-color: #ffffff; /* White background color */
   padding: 10px; /* Optional: Add padding for spacing */
 }
 
 .image-container img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain; /* Adjust the image size while maintaining aspect ratio */
 }
 
@@ -3783,7 +3836,8 @@ div.ant-upload {
 
 .image-container img {
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
+  max-width: max-content;
   cursor: pointer;
 }
 
@@ -3849,7 +3903,7 @@ div.ant-upload {
   color: #1890ff;
 }
 .add-to-cart-button {
-  background-color: hwb(25 55% 3%);
+  background-color: #f7b98c;
   color: #fff;
   width: 80%;
   margin-bottom: 1rem;
@@ -3881,6 +3935,9 @@ div.ant-upload {
 }
 .description-toggle:hover {
   text-decoration: underline;
+}
+.categoryCard {
+  padding: 1.5rem;
 }
 
 @media (max-width: 960px) {
