jerking bug fix in ProductDetails Page

--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -3815,7 +3815,7 @@ div.ant-upload {
 .ant-cart-body {
   /* border-radius: 5%; */
   padding: 50px;
-  width: 80%;
+  width: 80vw;
   margin: auto;
   margin-top: 50px;
 }
