--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -2160,6 +2160,15 @@ body {
   margin-top: -250px;
   margin-bottom: auto;
 }
+.card-verify {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
+  border-radius: 12px;
+  margin-top: -50px;
+  margin-bottom: auto;
+}
 .card-category {
   width: 100%;
   max-width: 500px;
@@ -2427,7 +2436,14 @@ body {
   padding: 0 !important;
   margin-top: 0 !important;
 }
-
+/* .ant-alert-description {
+  background-color: #000;
+  max-width: 100%;
+  height: max-content;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow: scroll;
+} */
 .layout-default .ant-layout-content {
   padding-top: 0px;
 }
