multiVendor Base Setup
changed all components to have Vendor Support

Changes:
1. updated App.js to have superAdmin routes
2. Only SuperAdmin can see Vedors in Sidenav and see the routes
3. Seperate Vendor SignUp adn Login Pages and Server Routes
4. updated product routes to handle add VendorIDs
5. AllProducts show vendor name if SuperAdmin is Logged in
6. SuperAdmin can see and approve vendors
7. Browse, Product Details and Home show Vendor name
8. Filter by Vendors in Browse Filters added
9. seperate route to handle vendor related routes in server

--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -2086,6 +2086,9 @@ body {
   background: url("../images/bg-signup.jpg") no-repeat center;
   background-size: cover;
 }
+.vendor-sign-up-header {
+  background: url("../images/vendor-bg-signup.jpg") no-repeat center;
+}
 .header-col.header-brand {
   white-space: nowrap;
 }
@@ -2204,6 +2207,11 @@ body {
 .mt-25,
 .my-25 {
   margin-top: 25px;
+}
+.m-5,
+.mt-5,
+.my-5 {
+  margin-top: 5px;
 }
 .m-20,
 .mt-20,
@@ -3508,7 +3516,7 @@ div.ant-upload {
   line-height: 1.5;
 }
 .productShow .ant-card-body {
-  background-color: #fffcf9;
+  background-color: #faf2fc;
 }
 .bg-light {
   background-color: #fafafa;
@@ -4098,4 +4106,8 @@ div.ant-upload {
 /* Css for data tables */
 .ql-editor {
   min-height: 200px !important;
+}
+.centered-cell {
+  text-align: center !important;
+  background-color: #00369e;
 }
