--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -766,9 +766,9 @@ h4 {
   line-height: normal;
 }
 
-.ant-btn svg {
+/* .ant-btn svg {
   margin-right: 5px;
-}
+} */
 .header-control svg {
   width: 25px;
   height: 25px;
@@ -3703,317 +3703,30 @@ div.ant-upload {
   background-color: #eeff00;
 }
 
-/* @media screen and (max-width: 900px) {
-  .cart-item {
-    flex-wrap: wrap;
-  }
-
-  .image-container {
-    width: 200px;
-    height: 200px;
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  .product-details {
-    flex-basis: 100%;
-  }
-
-  .quantity-controls {
-    flex-basis: 100%;
-    margin-bottom: 10px;
-  }
-
-  .delete-button {
-    flex-basis: 100%;
-    margin-left: 0;
-    margin-top: 10px;
-    padding: 0;
-  }
-} */
-
-/* @media screen and (max-width: 768px) {
-  .cart-item {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .image-container {
-    width: 200px;
-    height: auto;
-    margin-bottom: 20px;
-  }
-
-  .quantity-controls {
-    flex-basis: 100%;
-    margin-bottom: 10px;
-  }
-
-  .delete-button {
-    flex-basis: 100%;
-    margin-left: 0;
-    margin-top: 10px;
-    padding: 0;
-  }
-  .layout-dashboard {
-    width: 90%;
-  }
-  .quantity-controls button {
-    width: 25px;
-    height: 25px;
-    font-size: 15px;
-    margin-right: 3px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .image-container {
-    width: 120px;
-    height: 120px;
-  }
-
-  .quantity-controls button {
-    width: 20px;
-    height: 20px;
-    font-size: 14px;
-    margin-right: 3px;
-  }
-
-  .product-details h3 {
-    font-size: 85%;
-  }
-
-  .product-details p {
-    font-size: 80%;
-  }
-
-  .delete-button {
-    font-size: 12px;
-    padding: 0px;
-  }
-
-  .proceed-button {
-    font-size: 13px;
-  }
-  .layout-dashboard {
-    width: 100%;
-  }
-} */
-
 /* css for ShowProductDetails */
-
-/* .layout-spd {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px;
-} */
-
-.show-productDetails-card,
-.ant-cart-body {
-  /* border-radius: 5%; */
-  padding: 50px;
-  width: 80vw;
-  margin: auto;
-  margin-top: 50px;
+.spd-col {
+  padding: 20px 40px;
 }
 
-.column-spd {
-  padding: 50px;
-}
-
-.actionButtons-spd {
-  align-self: center;
-}
-
-.image-container {
-  text-align: center;
-}
-
-.image-container img {
-  width: 100%;
-  /* max-width: 300px; */
-  max-width: max-content;
-  cursor: pointer;
-}
-
-.spd {
-  padding: 10px;
-}
-#descrip {
-  /* background-color: #f5f5f5; */
-  padding: 10px;
-  margin: auto;
-}
-
-.details-content h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.details-content p {
-  font-size: 16px;
-  margin-bottom: 5px;
-}
-.quantity-controls-spd {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.quantity-controls-spd p {
-  /* margin-right: 10px; */
-  margin-top: 10px;
-  font-weight: bold;
-  padding-bottom: 5px;
-}
-
-.quantity-controls-spd button {
-  /* background-color: #52c41a; */
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  /* text-align: center; */
-  width: 34px;
-  height: 34px;
-  /* border: none;
-  background-color: #f0f0f0;
-  border-color: unset;
-  border-radius: 4px;
-  color: #333;
-  font-size: 18px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-right: 5px;
-  margin-left: 5px; */
-}
-.quantity-controls-spd button svg {
-  margin-left: 5px;
-}
-
-/* .quantity-controls-spd button:hover {
-  background-color: #ccc;
-}
-
-.quantity-controls-spd button:active {
-  background-color: #999;
-} */
-
-.description-spd {
-  margin-top: 10px;
-  text-align: justify;
-}
-
-.description-toggle {
-  cursor: pointer;
-  color: #1890ff;
-}
-.add-to-cart-button {
-  width: 80%;
-  margin-bottom: 1rem;
-}
-
-.buy-now-button {
-  background-color: rgb(252, 197, 95);
-  color: #000;
-  width: 80%;
-}
-
-.description-spd {
-  padding: 0px 60px;
-}
-
-/* //check this later */
-.description-toggle {
-  align-items: center;
-  color: #1890ff;
-  cursor: pointer;
-  font-weight: bold;
-  text-decoration: none;
-  padding-left: 20px;
-}
-
-.description-toggle:hover {
-  text-decoration: underline;
-}
-.description-toggle:hover {
-  text-decoration: underline;
-}
-.categoryCard {
-  min-width: 40%;
-  padding: 1.5rem;
-}
-.div-buttons-spd {
-  /* background-color: #000; */
+/* Flexbox styles for the container */
+.quantity-container {
   display: flex;
   flex-direction: column;
-  justify-content: baseline;
+  align-items: flex-start;
+}
+.quantity-section {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
-@media (max-width: 960px) {
-  .add-to-cart-button,
-  .buy-now-button {
-    width: 80%;
-  }
-  .show-productDetails-card,
-  .ant-cart-body {
-    padding: 0px;
-  }
+.add-to-cart-button {
+  width: 200px;
 }
-@media (max-width: 854px) {
-  .show-productDetails-card,
-  .ant-cart-body {
-    padding: 20px;
-  }
-  .add-to-cart-button,
-  .buy-now-button {
-    width: 100%;
-  }
-
-  .column-spd {
-    padding: 20px 2px;
-  }
-  .details-content h1 {
-    font-size: large;
-  }
-  .details-content {
-    padding-top: 30px;
-  }
-}
-
-@media (max-width: 767px) {
-  .add-to-cart-button,
-  .buy-now-button {
-    width: 100%;
-  }
-  .description-spd {
-    padding: 10px;
-  }
-  .add-to-cart-button {
-    margin-top: 0.5rem;
-  }
-  .column-spd {
-    padding: 0px;
-  }
-  .details-content {
-    padding: 10px;
-  }
-  .div-buttons-spd {
-    padding-left: 20px;
-  }
-
-  @media (max-width: 600px) {
-    .layout-spd {
-      width: 100%;
-    }
-  }
-  @media (max-width: 400px) {
-    /* .quantity-controls-spd button {
-      width: 100%;
-      height: 20px;
-      font-size: 14px;
-      margin-right: 3px;
-    } */
-  }
+.buy-now-button {
+  width: 200px;
+  background-color: rgb(252, 197, 95);
+  color: #000;
 }
 
 /* Css for data tables */
