added simple antdcarousel for slideshow images

--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -3977,3 +3977,5 @@ div.ant-upload {
   background-size: cover;
   background-image: url("https://1.bp.blogspot.com/-iDTaY6MfvF8/WDxVjqnl-7I/AAAAAAAABlw/ufAH0E0AVgIitRPJlrBpmHWGei5Qp5GWwCLcB/s1600/LLLL.jpg");
 }
+
+/* Carousel styling*/
